# legend_cli

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: bootstrap.md  console.md  deploy.md  env.md  generate.md  new.md  overview.md  provision.md  run.md  test.md  tutorial.md
legend/: __init__.py  __main__.py  legend.py
legend/commands/: __init__.py  base.py  bootstrap.py  console.py  deploy.py  destroy.py  env.py  generate.py  info.py  new.py  provision.py  run.py  test.py
legend/lib/: config.py  names.py
legend/scripts/: git_askpass.sh
legend/templates/: README.md  requirements-dev.txt  setup.py
legend/templates/.github/workflows/: deploy.yml
legend/templates/config/: application.toml  environment-local.toml  environment.toml
legend/templates/deployment/: README.md  azuredeploy.json  azuredeploy.parameters.json  terraform.tf  terraform.tfvars
legend/templates/function/: __init__.py
legend/templates/lib/config/: __init__.py  config.py
legend/templates/test/: function.py
