[tool.poetry]
name = "legend-cli"
version = "0.1.0"
description = "A CLI for managing Azure Functions, inspired by Ruby on Rails"
authors = []
readme = "README.md"
packages = [{include = "legend"}]

[tool.poetry.dependencies]
python = "^3.9"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[tool.poetry.scripts]
legend = "legend.legend:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
